# XTDrone

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.en.md  README.md  px4fmu-v2_default.px4  px4fmu-v5_default.px4  update.sh
actor_related/: 123  Actor.proto  ActorPlugin.cpp  ActorPlugin.h  ActorPlugin1.cpp  ActorPlugin1.h  ActorPlugin2.cpp  ActorPlugin2.h  ActorPlugin3.cpp  ActorPlugin3.h  ActorPlugin4.cpp  ActorPlugin4.h  ActorPlugin5.cpp  ActorPlugin5.h  CMakeLists.txt  CmdActor.proto
actor_related/gazebo_ros_actor_plugin/gazebo_ros_actor_cmd_plugin/: package.xml
actor_related/gazebo_ros_actor_plugin/gazebo_ros_actor_cmd_plugin_msgs/: package.xml
coordination/fixed_wing_formation_control/: .gitignore  CMakeLists.txt  compile_commands.json  package.xml
coordination/fixed_wing_formation_control/headerfile/: FWcmd.h  FWstates.h  Formation_control_states.h  Fw_cmd_mode.h  Fw_current_mode.h  Fwmonitor.h  Leaderstates.h
coordination/fixed_wing_formation_control/launchfile/: fixed_wing_formation_control.launch
coordination/fixed_wing_formation_control/msg/: FWcmd.msg  FWstates.msg  Formation_control_states.msg  Fw_cmd_mode.msg  Fw_current_mode.msg  Fwmonitor.msg  Leaderstates.msg
coordination/fixed_wing_formation_control/scripts/: Readme.md  multi_uav_sim_ba_3vtol.sh  ugv_random_move.py
coordination/formation_communication_demo/control/: CMakeLists.txt  package.xml
motion_planning/ugv_planing/pure_pursuit/: CMakeLists.txt
motion_planning/ugv_planning/hybrid_astar_test/: CMakeLists.txt
sensing/uav_track_ugv/uav_track_car/: CMakeLists.txt  package.xml
sitl_config/: CMakeLists.txt  stop_gazebo_ode.sh
sitl_config/car/colorado/: CMakeLists.txt  CMakeLists.txt~  package.xml
sitl_config/ekf2_config/: iris_1  iris_16  iris_18  iris_20  iris_23  iris_24  iris_26  iris_42  iris_45  iris_50  iris_8  iris_9  iris_gps_mag_available  iris_gps_mag_denied
sitl_config/ekf2_config_1.9/: rcS
sitl_config/gazebo_plugin/actor_collisions/: ActorCollisionsPlugin.cc  ActorCollisionsPlugin.hh  CMakeLists.txt  README.md  actor_collisions.world  actor_collisions.world.erb
sitl_config/gazebo_plugin/citysim/: CMakeLists.txt  README.md
sitl_config/gazebo_plugin/gimbal_controller/: gazebo_gimbal_controller_plugin.cpp  gazebo_gimbal_controller_plugin.hh
sitl_config/gazebo_plugin/velodyne_gazebo_plugins/: CMakeLists.txt
sitl_config/gazebo_plugin/wind_plugin/: gazebo_ros_wind_plugin_xtdrone.cpp  gazebo_ros_wind_plugin_xtdrone.h
sitl_config/gazebo_ros_pkgs/: .gitignore  README.md  SENSORS.md
sitl_config/gazebo_ros_pkgs/docs/: CONTRIBUTING.md  RELEASE.md
sitl_config/gazebo_ros_pkgs/gazebo_dev/: CHANGELOG.rst  CMakeLists.txt  colcon.pkg  package.xml
sitl_config/gazebo_ros_pkgs/gazebo_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
sitl_config/gazebo_ros_pkgs/gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
sitl_config/gazebo_ros_pkgs/gazebo_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
sitl_config/gazebo_ros_pkgs/gazebo_ros_control/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  robot_hw_sim_plugins.xml
sitl_config/gazebo_ros_pkgs/gazebo_ros_pkgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
sitl_config/init.d-posix/: 2033_plane_gimbal  2033_plane_gimbal.post  6011_typhoon_h480  px4-rc.mavlink  rcS  rcS.backup
sitl_config/launch/: Drone_with_arm.launch  actor.launch  catvehicle.launch  ego_swarm.launch  ego_swarm_8.launch  hybrid_multi_vehicle.launch  indoor1.launch  indoor1_stereo_camera.launch  indoor1_without_px4.launch  indoor2.launch  indoor2_stereo_camera.launch  indoor3.launch  indoor3_2d_lidar.launch  indoor4.launch  indoor4_2d_lidar.launch  indoor4_3d_lidar.launch  indoor5.launch  iris_arm.launch  mavros_posix_sitl.launch  multi_uav.launch  multi_uav_10.launch  multi_uav_6.launch  multi_uav_mavros_sitl.launch  multi_uav_mavros_sitl_sdf.launch  multi_vehicle.launch  multi_vehicle_1.11.launch  multi_vehicle_without_px4.launch  outdoor1.launch  outdoor1_stereo_camera.launch  outdoor1_ugv.launch  outdoor2.launch  outdoor2_precision_landing.launch  outdoor2_stereo_camera.launch  outdoor2_ugv.launch  outdoor3.launch  outdoor3_ugv.launch  outdoor4.launch  posix_sitl.launch  posix_sitl_without_px4.launch  robocup.launch  (+18 more)
sitl_config/launch _1.9/: indoor3_3d_lidar.launch  indoor4_3d_lidar.launch
sitl_config/launch/px4/: px4.launch  px4_config_iris_0.yaml  px4_config_iris_1.yaml  px4_config_iris_2.yaml
sitl_config/launch_1.8/: 2d_motion_planning.launch  Drone_with_arm.launch  indoor3_2d_lidar.launch  indoor3_3d_lidar.launch  move_base.launch
sitl_config/launch_1.9/: Drone_with_arm.launch  indoor1_stereo_camera.launch  indoor2_stereo_camera.launch  indoor3_3d_lidar.launch  indoor4_2d_lidar.launch
sitl_config/make_gazebo_model/script/: make_gazebo_model.py
sitl_config/models/3d_gpu_lidar/: 3d_gpu_lidar.sdf
sitl_config/models/3d_lidar/: 3d_lidar.sdf  model.config
sitl_config/models/H/: model.config  model.sdf
sitl_config/models/House/: House.sdf  model.config
sitl_config/models/M100/: M100.sdf  model.config
sitl_config/models/apriltag0-2/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
sitl_config/models/apriltag3-5/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
sitl_config/models/arm/: arm.sdf  model.config
sitl_config/models/arm_gripper/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  (+1 more)
sitl_config/urdf/: iris_arm_base.xacro  robotic_arm.xacro
sitl_config/vrx/: .gitignore  Changelog.md  README.md
sitl_config/worlds/: actor_ros.world  ego_swarm.world  ego_swarm_4.world  ego_swarm_8.world  empty.world  grasping.world  indoor1.world  indoor2.world  indoor3.world  indoor4.world  indoor5.world  indoor6.world  indoor7.world  indoor8.world  map2_2.world  map2_3.world  outdoor1.world  outdoor1_1.world  outdoor1_light.world  outdoor1_new_cars.world  outdoor2.world  outdoor3.world  outdoor4.world  robocup.world  robocup_indoor.world  robocup_withcars.world  windy_xtdrone.world  zhihang1.world  zhihang2.world
ugv/sicktoolbox_wrapper/: CMakeLists.txt  package.xml
(+2327 files in other folders)
